# esports-bot

./: .dockerignore  .env-example  .gitattributes  .gitignore  .style.yapf  .travis.yml  Dockerfile  README.md  docker-compose.yml  docker-push.sh  requirements.txt  requirements[music].txt  requirements[twitter].txt  secrets.template  setup.cfg  timezone.json  todo  update-bot.sh
.github/workflows/: docker_push.yml  main.yml
db_instance/: build_script.sql  docker-compose.yml
doc/: Makefile  conf.py  esportsbot.rst  index.rst
doc/esportsbot/: esportsbot.cogs.rst  esportsbot.lib.rst  esportsbot.rst  modules.rst
docs/: conf.py  index.rst
docs/esportsbot/: esportsbot.DiscordReactableMenus.rst
esportsbot/: __main__.py  base_functions.py  bot.py  db_gateway.py  user_strings.toml
esportsbot/DiscordReactableMenus/: reactable_lib.py
esportsbot/cogs/: DefaultRoleCog.py  MusicCog.py  RoleReactCog.py  VoicemasterCog.py
esportsbot/lib/: timeUtil.py
old_db_instance/: Dockerfile
src/: base_functions.py  bot.py  client.py  db_gateway.py  generate_schema.py  main.py  requirements.txt  schema.sql  secrets.template
src/cogs/: AdminCog.py  DefaultRoleCog.py  LogChannelCog.py  LoggingCog.py  MenusCog.py  TestCog.py  TwitchIntegrationCog.py  TwitterIntegrationCog.py  VoicemasterCog.py
src/common/: discord.py  io.py  util.py
src/database/: gateway.py  models.py
src/esportsbot/: banned_words.txt  base_functions.py  bot.py  database.py  db_gateway.py  db_gateway_v1.py  generate_schema.py  models.py  user_strings.toml
src/extensions/: AdminTools.py  AutoRoles.py  (+2 more)
(+72 files in other folders)
