[metadata]
name = fragsoc-esports-bot
version = 0.1.0
author = FragSoc
author_email = fragsoc@yusu.org

[options]
packages = find:

[options.entry_points]
console_scripts =
    esports-bot = esportsbot:bot.launch

[yapf]
based_on_style = pep8
column_limit = 127
indent_width = 4
dedent_closing_brackets = true
split_all_comma_separated_values = true
split_before_arithmetic_operator = true
split_before_bitwise_operator = true
each_dict_entry_on_separate_line = true

[flake8]
max-line-length = 127

[pycodestyle]
max-line-length = 127

[mypy]
show_error_codes = True
disable_error_code = import
